Fix: mobile nav bar doesn't add white space

--- a/src/style/components/_sidebar.scss
+++ b/src/style/components/_sidebar.scss
@@ -99,7 +99,8 @@
     transition: .5s;
     &.closed {
         opacity: 0;
-        transform: translateX(100%);
+        transform: translateX(-100%);
+        // display: none;
     }
     &.open {
         opacity: 1;
