--- a/src/style/main.css
+++ b/src/style/main.css
@@ -723,8 +723,8 @@ body .page__title {
 
 .sidebar.closed {
   opacity: 0;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
 }
 
 .sidebar.open {
